--- a/src/templates/field-builder-modal.html
+++ b/src/templates/field-builder-modal.html
@@ -16,7 +16,7 @@
             </span>
             <div hidden class='mb-3'>
               {# NEW GROUP NAME #}
-              <label for='newFieldsGroupKeyInput'>{{ 'Add new group'|trans }}</label>
+              <label for='newFieldsGroupKeyInput'>{{ 'Add group'|trans }}</label>
               <div class='input-group'>
                 <input type='text' autocomplete='off' placeholder='{{ 'New group name'|trans }}' id='newFieldsGroupKeyInput' class='form-control'>
                 <div class='input-group-append'>
