add title to Switch layout buttons so we know what they do on hover

--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -29,7 +29,7 @@
     </p>
 
     <div class='d-flex align-items-center'>
-      <div class='hl-hover-gray rounded p-1 align-self-baseline mr-1' data-action='toggle-items-layout'>
+      <div title='{{ 'Switch layout'|trans }}' class='hl-hover-gray rounded p-1 align-self-baseline mr-1' data-action='toggle-items-layout'>
         <i class='fas fa-fw fa-list'></i>
         <i class='fas fa-fw fa-table'></i>
       </div>
