--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1026,6 +1026,11 @@ input[type='color'] {
     background-color: $lightblue;
 }
 
+.admin-badge {
+    background-color: $lightblue;
+    border: 1px solid $gold;
+}
+
 /* give the togglePassword some borders like input */
 .input-border {
     border: 1px solid #ced4da;
