--- a/src/templates/show-templates-select.html
+++ b/src/templates/show-templates-select.html
@@ -7,7 +7,7 @@
         <button type='button' class='btn btn-secondary' data-action='show-import-tpl'>{{ 'Import from file'|trans }} (.eln)</button>
         <div class='vertical-separator d-inline mx-3'></div>
         <button type='button' class='btn btn-primary' data-action='create-template'>{{ 'Create'|trans }}</button>
-        <input type='file' aria-hidden='true' hidden accept='.eln' id='import_tpl' class='form-control mt-2 col-md-3'>
+        <input type='file' aria-hidden='true' hidden accept='.eln' id='import_tpl' class='form-control mt-2'>
       </div>
     </div>
   {% endif %}
