allow duplication of templates from view/edit mode

--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -36,6 +36,13 @@
     </div>
   </div>
 
+  {# DUPLICATE TEMPLATE #}
+  <div class='mr-2'>
+    <div title='{{ 'Duplicate'|trans }}' data-action='duplicate-entity' class='hl-hover-gray p-2 rounded'>
+      <i class='fas fa-copy fa-fw'></i>
+    </div>
+  </div>
+
   {# DOWNLOAD #}
   <div class='mr-2'>
     <div title='{{ 'Download template'|trans }}' data-action='download-template' data-id='{{ Entity.id }}' class='hl-hover-gray p-2 rounded'>
