allow sysadmin to add from remote, and select team and permission level

--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -264,7 +264,7 @@
 </div>
 {% endif %}
 
-{% if App.Config.configArr.admins_create_users_remote_dir and App.Request.getScriptName|split('/')|last == 'admin.php' %}
+{% if App.Config.configArr.admins_create_users_remote_dir %}
   {# CREATE USER ACCOUNT through remote API call #}
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Add account from external directory'|trans }}</h3>
   <div class='pl-3'>
@@ -311,8 +311,21 @@
           </tbody>
         </table>
         <div class='col-md-12 text-center mt-2'>
-          <button data-action='create-user-from-remote' class='btn btn-primary'>{{ 'Add selected'|trans }}</button>
+          <div class='input-group'>
+          {# team selection dropdown, disabled on admin page #}
+          <div class='input-group-prepend'>
+            <select class='custom-select brr-none' id='remoteUserTeam' {{ App.Request.getScriptName|split('/')|last == 'admin.php' ? 'disabled' }}>
+              {% for team in teamsArr %}
+                <option value='{{ team.id }}' {{- App.Users.userData.team == team.id ? ' selected' }}>{{ team.name }}</option>
+              {% endfor %}
+            </select>
+          </div>
+        <div class='input-group-prepend'>
+          <div class='input-group-text'>
+            <input type='checkbox' class='mr-1' id='remoteUserIsAdmin'>{{ 'Admin'|trans }}
+          </div>
         </div>
+          <button data-action='create-user-from-remote' class='brl-none btn btn-primary'>{{ 'Add selected'|trans }}</button>
       </div>
     {% endif %}
   </div>
