add border on the table columns
see: https://github.com/elabftw/elabftw/issues/4356#issuecomment-1568686182

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -350,8 +350,11 @@ button:disabled {
 
     th {
         white-space: nowrap;
-    }
 
+        &:not(:last-child) {
+            border-right: $firstlevel 1px solid;
+        }
+    }
 }
 
 /* TABLE SHOW MODE */
