set default mode to view for template on team page

--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -1,4 +1,4 @@
-{% set mode = App.Request.query.get('mode') %}
+{% set mode = App.Request.query.get('mode') | default('view') %}
 
 {# TOP TOOLBAR #}
 <hr>
