[feat] allow importing metadata from items types or experiments
templates

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -23,7 +23,7 @@
   <li data-action='switch-tab' data-tabtarget='2'>{{ 'Groups'|trans }}</li>
   <li data-action='switch-tab' data-tabtarget='3'>{{ 'Users'|trans }}</li>
   <li data-action='switch-tab' data-tabtarget='4'>{% trans %}Status{% plural 2 %}Status{% endtrans %}</li>
-  <li data-action='switch-tab' data-tabtarget='5'>{{ 'Types of items'|trans }}</li>
+  <li data-action='switch-tab' data-tabtarget='5'>{{ 'Database categories'|trans }}</li>
   <li data-action='switch-tab' data-tabtarget='6'>{{ 'Export'|trans }}</li>
   <li data-action='switch-tab' data-tabtarget='7'>{{ 'Tag manager'|trans }}</li>
 </ul>
@@ -266,11 +266,11 @@
 
 <!-- TAB 5 ITEMS TYPES-->
 <div data-tabcontent='5' hidden>
-  <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Database Items Types'|trans }}</h3>
+  <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Database categories'|trans }}</h3>
   <div class='pl-3'>
     <div {{ App.Request.query.has('templateid') ? 'hidden' }}>
       <div class='d-flex justify-content-between'>
-        <p class='col-form-label'>{{ 'This menu allows you to define categories for entries in the Database. A database item type is similar to an experiment template but for database entries.'|trans }}</p>
+        <p class='col-form-label'>{{ 'This menu allows you to define categories for entries in the Database. A database category is similar to an experiment template but for database entries.'|trans }}</p>
         <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
         <div>
           <button type='button' class='btn btn-primary' data-action='itemstypes-create'>{{ 'Create'|trans }}</button>
