--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -111,6 +111,7 @@
   <div id='metadataDiv'></div>
   <div class='mt-3 row'>
     <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' class='btn btn-secondary'>{{ 'Add field'|trans }}</button>
+    <button type='button' data-action='toggle-modal' data-target='fieldLoaderModal' class='ml-3 btn hl-hover-gray'>{{ 'Load fields'|trans }}</button>
   </div>
 </div>
 <hr>
