--- a/src/templates/show-templates-edit.html
+++ b/src/templates/show-templates-edit.html
@@ -132,6 +132,7 @@
       {# this div is filled in JS by Metadata.class.ts edit() #}
       <div id='metadataDiv'></div>
       <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' class='btn btn-primary mt-3 row'>{{ 'Add field'|trans }}</button>
+    <button type='button' data-action='toggle-modal' data-target='fieldLoaderModal' class='ml-3 btn hl-hover-gray'>{{ 'Load fields'|trans }}</button>
     </div>
     <hr>
     {% set mode = 'edit-template' %}
