--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -325,6 +325,7 @@
       <div id='metadataDiv' class='col-md-6'></div>
       <div class='mt-3'>
         <button type='button' data-action='toggle-modal' data-target='fieldBuilderModal' class='btn btn-secondary'>{{ 'Add field'|trans }}</button>
+        <button type='button' data-action='toggle-modal' data-target='fieldLoaderModal' class='ml-3 btn hl-hover-gray'>{{ 'Load fields'|trans }}</button>
       </div>
       {% set mode = 'edit-template' %}
       {% include 'steps-links-edit.html' %}
