--- a/src/templates/changelog.html
+++ b/src/templates/changelog.html
@@ -2,36 +2,10 @@
 
 {% block body %}
 
-{% if Entity.type == 'experiments_templates' %}
-<a href='ucp.php?tab=3&templateid={{ Entity.id }}'>
-{% else %}
 <a href='{{ Entity.page }}.php?mode=view&id={{ Entity.id }}'>
-{% endif %}
-    <i class='fas fa-chevron-left mr-1'></i>{{ 'Go back'|trans }}
+  <i class='fas fa-chevron-left mr-1'></i>{{ 'Go back'|trans }}
 </a>
 
-<h3 class='my-3 p-2 pl-3 section-title' id='pageSubTitle'>{{ 'Changelog'|trans }}</h3>
-<div class='pl-3'>
-  <table class='table' aria-describedby='pageSubTitle' data-table-sort='true'>
-    <thead>
-      <tr>
-          <th>{{ 'Date'|trans }}</th>
-          <th>{{ 'User'|trans }}</th>
-          <th>{{ 'Property changed'|trans }}</th>
-          <th>{{ 'New value'|trans }}</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for change in changes %}
-      <tr>
-        <td>{{ change.created_at }}</td>
-        <td>{{ change.fullname }}</td>
-        <td>{{ change.target }}</td>
-        <td>{{ change.target == 'body' ? change.content|raw : change.content }}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
+{% include 'changelog-block.html' %}
 
 {% endblock body %}
