--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -98,7 +98,7 @@
               <a class='dropdown-item' href='revisions.php?type={{ Entity.type }}&item_id={{ Entity.id }}'><i class='fas fa-history fa-fw'></i> {{ revNum }} {% trans %}revision available{% plural revNum %}revisions available{% endtrans %}</a>
             {% endif %}
             <!-- CHANGELOG -->
-            <a class='dropdown-item' href='?id={{ Entity.id }}&mode=changelog'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
+            <a class='dropdown-item' href='?templateid={{ Entity.id }}&mode=changelog&tab=3'><i class='fas fa-list fa-fw'></i> {{ 'See changelog'|trans }}</a>
 
             {# DELETE #}
             {% if not Entity.entityData.locked %}
@@ -120,6 +120,8 @@
   {% if mode == 'view' %}
     {# VIEW MODE #}
     {% include 'templates-view.html' %}
+  {% elseif mode == 'changelog' %}
+    {% include 'changelog-block.html' %}
   {% else %}
     {# EDIT MODE #}
     {# TITLE #}
