wip: add possibility to archive entities and uploads

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -281,7 +281,10 @@ label {
     background-color: $lightred;
     border-color: $darkred;
     color: $darkred;
-    transition-duration: 500ms;
+}
+
+.hover-warning:hover {
+    background-color: $warningbg;
 }
 
 .hover-action:hover {
