--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -58,8 +58,11 @@
         <!-- DEFAULT LAYOUT (1) -->
         {% else %}
           <div class='col-md-4 col-sm-6'>
-            <div class='thumbnail box' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}' style='overflow: visible'>
+            <div class='thumbnail box {{ upload.state == constant('Elabftw\\Enums\\State::Archived').value ? 'bg-light' }}' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}' style='overflow: visible'>
               {% include('upload-dropdown-menu.html') %}
+              {% if upload.state == constant('Elabftw\\Enums\\State::Archived').value %}
+              <p class='mb-0'><i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Archived'|trans }}</p>
+              {% endif %}
 
               <!-- IMAGES -->
               {% if ext matches '/(jpg|jpeg|png|gif|tif|tiff|pdf|eps|svg|heic)$/i' %}
