--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -46,6 +46,10 @@
       {% if item.timestamped %}
         <i style='color:#{{ item.color }}' class='far fa-calendar-check fa-fw'></i>
       {% endif %}
+      {# archived icon #}
+      {% if item.state == constant('Elabftw\\Enums\\State::Archived').value %}
+        <i class='fas fa-box-archive fa-fw'></i>
+      {% endif %}
       {# category #}
       <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category|raw }}</a></span>
     </div>
