--- a/src/templates/view-edit.html
+++ b/src/templates/view-edit.html
@@ -33,6 +33,6 @@
 
 <div id='isArchivedDiv'>
 {% if Entity.entityData.state == constant('Elabftw\\Enums\\State::Archived').value %}
-  {{ 'This entry is archived'|trans|msg('ok', false) }}
+  {{ 'This entry is archived: it will not appear in the listings by default.'|trans|msg('ok', false) }}
 {% endif %}
 </div>
