--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -132,10 +132,9 @@
             <div class='input-group mr-1'>
               <div class='input-group-prepend'>
                 <div class='input-group-text'>
-                  <input id='showArchivedBox' type='checkbox' {{ App.Request.query.get('archived') == 'on' ? 'checked' }} name='archived' aria-label='{{ 'Show archived'|trans }}'>
+                  <input type='checkbox' {{ App.Request.query.get('archived') == 'on' ? 'checked' }} name='archived' class='mr-1' aria-label='{{ 'Show archived'|trans }}'>{{ 'Show archived'|trans }}
                 </div>
               </div>
-              <label for='showArchivedBox' class='input-group-text brl-none'>{{ 'Show archived'|trans }}</label>
             </div>
 
             <button class='btn btn-primary'>{{ 'Go'|trans }}</button>
