allow filtering only admins on users tab (admin/sysconfig)

--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -31,6 +31,11 @@
             <input type='checkbox' class='mr-1' {{ App.Request.query.has('includeArchived') ? 'checked="checked"' }} name='includeArchived'>{{ 'Include archived'|trans }}
           </div>
         </div>
+        <div class='input-group-append'>
+          <div class='input-group-text'>
+            <input type='checkbox' class='mr-1' {{ App.Request.query.has('onlyAdmins') ? 'checked="checked"' }} name='onlyAdmins'>{{ 'Show only Admins'|trans }}
+          </div>
+        </div>
       </div>
     </form>
   </div>
