--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -27,8 +27,13 @@
           <button class='btn btn-secondary' id='editusersShowAll' type='button'>{{ 'Show all'|trans }}</button>
         </div>
         <div class='input-group-append'>
-          <div class="input-group-text">
+          <div class='input-group-text'>
             <input type='checkbox' class='mr-1' {{ App.Request.query.has('includeArchived') ? 'checked="checked"' }} name='includeArchived'>{{ 'Include archived'|trans }}
+          </div>
+        </div>
+        <div class='input-group-append'>
+          <div class='input-group-text'>
+            <input type='checkbox' class='mr-1' {{ App.Request.query.has('onlyAdmins') ? 'checked="checked"' }} name='onlyAdmins'>{{ 'Show only Admins'|trans }}
           </div>
         </div>
       </div>
