--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -31,7 +31,7 @@
 
   {# CREATE EXPERIMENT #}
   <div class='mr-2'>
-    <div title='{{ 'Create experiment from template'|trans }}' data-action='create-entity' data-tplid='{{ Entity.id }}' class='hl-hover-gray p-2 rounded'>
+    <div title='{{ 'Create experiment from template'|trans }}' data-action='create-entity' data-type='experiments' data-tplid='{{ Entity.id }}' class='hl-hover-gray p-2 rounded'>
       <i class='fas fa-circle-plus fa-fw'></i>
     </div>
   </div>
