--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -56,7 +56,7 @@
     </button>
     {% endif %}
     <!-- logo -->
-    <a href='index.php' title='{{ 'Go to index'|trans }}'><img class='navbar-brand d-xs-none d-sm-none d-lg-none d-xl-block' src='assets/images/logo-header.svg' width='110' height='40' alt='elabftw logo' /></a>
+    <a href='dashboard.php' title='{{ 'Go to dashboard'|trans }}'><img class='navbar-brand d-xs-none d-sm-none d-lg-none d-xl-block' src='assets/images/logo-header.svg' width='110' height='40' alt='elabftw logo' /></a>
 
     {% set scriptName = App.Request.getScriptName|split('/')|last %}
     {% if App.Session.has('is_auth') %}
@@ -66,7 +66,7 @@
             <a class='nav-item nav-link {{ scriptName == 'experiments.php' ? 'active' }}'
                 href='experiments.php'>{% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</a>
             <a class='nav-item nav-link {{ scriptName == 'database.php' ? 'active' }}'
-                href='database.php'>{{ 'Database'|trans }}</a>
+                href='database.php'>{{ 'Resources'|trans }}</a>
 
             {% if not App.Session.has('is_anon') %}
             <a class='nav-item nav-link {{ scriptName == 'team.php' ? 'active' }}'
@@ -133,6 +133,7 @@
             {% endif %}
             <div class='dropdown-divider'></div>
             {% if App.Session.has('is_auth') and not App.Session.has('is_anon') %}
+              <a class='dropdown-item' href='dashboard.php'><i class='fas fa-table-columns fa-fw'></i> {{ 'Dashboard'|trans }}</a>
               <a class='dropdown-item' href='ucp.php?tab=3'><i class='fas fa-layer-group fa-fw'></i> {{ 'My templates'|trans }}</a>
               <a class='dropdown-item' href='profile.php'><i class='fas fa-user fa-fw'></i> {{ 'My profile'|trans }}</a>
               <a class='dropdown-item' data-action='toggle-todolist' href='#'><i class='fas fa-list fa-fw'></i> {{ 'Todolist'|trans }}</a>
