--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,13 +50,60 @@ $text-muted: $medium;
 @font-face {
     font-display: swap;
     font-family: 'Lato';
-    src: url('fonts/lato-medium-webfont.ttf');
-    src: url('fonts/lato-medium-webfont.eot');
+    font-style: normal;
+    font-weight: 400;
     src:
-        url('fonts/lato-medium-webfont.eot?#iefix') format('embedded-opentype'),
-        url('fonts/lato-medium-webfont.woff') format('woff'),
-        url('fonts/lato-medium-webfont.ttf') format('truetype'),
-        url('fonts/lato-medium-webfont.svg#webfont') format('svg');
+        url('fonts/lato-regular.woff2') format('woff2'),
+        url('fonts/lato-regular.ttf') format('truetype');
+}
+@font-face {
+    font-display: swap;
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 400;
+    src:
+        url('fonts/lato-italic.woff2') format('woff2'),
+        url('fonts/lato-italic.ttf') format('truetype');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    src:
+        url('fonts/lato-bold.woff2') format('woff2'),
+        url('fonts/lato-bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 700;
+    src:
+        url('fonts/lato-bold-italic.woff2') format('woff2'),
+        url('fonts/lato-bold-italic.ttf') format('truetype');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 900;
+    src:
+        url('fonts/lato-black.woff2') format('woff2'),
+        url('fonts/lato-black.ttf') format('truetype');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Lato';
+    font-style: italic;
+    font-weight: 900;
+    src:
+        url('fonts/lato-black-italic.woff2') format('woff2'),
+        url('fonts/lato-black-italic.ttf') format('truetype');
 }
 
 body {
